...

	<!-- Actions & Button Labels -->
	<!-- ======================= -->

	<string name="yes_button_label">Yes</string>
	<string name="no_button_label">No</string>
	<string name="ok">OK</string>
	<string name="str_next">Next &gt;&gt;</string>
	<string name="str_previous">&lt;&lt; Previous</string>
	<string name="str_page_info">Page {0} of {1}</string>
	<string name="refresh">Refresh</string>
	<string name="return_to_register">Return</string>

...
	<string name="component_desc_p2p_process_records_service">Processes the records when using peer to peer for file sharing</string>


	<!-- QR Code Scan Feature -->
	<!-- ==================== -->

	<string name="scan_qr_code_title">Scan QR Code</string>
	<string name="permission_camera_rationale">Access to the camera is needed for detection.</string>
	<string name="no_camera_permission">This application cannot run because it does not have permission to access the camera. The application will now exit.</string>
	<string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
	<string name="title_activity_main">Barcode Reader Sample</string>
	<string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
	<string name="read_barcode">Read Barcode</string>
...
	<!-- ===================== -->

	<string name="advanced_search">Advanced Search</string>
	<string name="out_and_inside">Outside and inside my health facility</string>
	<string name="requires_internet_connection">(requires internet connection)</string>
	<string name="my_catchment_area">My health facility only</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="anc_id">ANC ID</string>
	<string name="id_number">ANC ID</string>
	<string name="edd">Edd</string>
	<string name="exp_date_of_delivery">Expected date of delivery</string>
	<string name="dob">Dob</string>
	<string name="date_of_birth">Date of birth</string>
	<string name="mobile_phone_number">Mobile phone number</string>
	<string name="phone_number">Phone number</string>
	<string name="alternate_contact_name">Alternate contact name</string>
	<string name="alt_contact_name">Alternate contact name</string>
	<string name="search">Search</string>
	<string name="search_results">Search Results</string>
	<string name="searching_dialog_title">Searching…</string>
	<string name="searching_dialog_message">Please wait</string>
	<string name="matching_results">%1$s matches</string>
	<string name="qr_code_label">QR Code</string>
	<string name="clients_facility">Client\'s facility</string>
...
