<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/register_search_bar_max_margin"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/advanced_search_label_size"
                    android:text="@string/clients_facility" />

                <RelativeLayout
                    android:id="@+id/out_and_inside_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.vijay.jsonwizard.customviews.RadioButton
                        android:id="@+id/out_and_inside"
                        style="@style/Material.Drawable.RadioButton.AdvancedSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/out_and_inside"
                        android:orientation="vertical">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="5"
                            android:paddingStart="@dimen/advanced_search_text_padding"
                            android:text="@string/out_and_inside"
                            android:textColor="@color/black_text_color"
                            android:textSize="@dimen/advanced_search_label_size" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:paddingStart="@dimen/advanced_search_text_padding"
                            android:text="@string/requires_internet_connection"
                            android:textColor="@color/black_text_color"
                            android:textSize="@dimen/advanced_search_label_small_size" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/my_catchment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/register_search_bar_margin">

                    <com.vijay.jsonwizard.customviews.RadioButton
                        android:id="@+id/my_catchment"
                        style="@style/Material.Drawable.RadioButton.AdvancedSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/my_catchment"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:maxLines="5"
                        android:paddingStart="@dimen/advanced_search_text_padding"
                        android:text="@string/my_catchment_area"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/advanced_search_label_size" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/first_name"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/last_name"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/anc_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:hint="@string/id_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/anc_id"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/register_search_bar_max_margin"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/advanced_search_label_size"
                    android:text="@string/qr_code_label" />

                <Button
                    android:id="@+id/qrCodeButton"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/advanced_search_qr_code"
                    android:paddingEnd="@dimen/register_search_bar_min_margin"
                    android:paddingLeft="@dimen/register_search_bar_min_margin"
                    android:paddingRight="@dimen/register_search_bar_min_margin"
                    android:paddingStart="@dimen/register_search_bar_min_margin"
                    android:text="@string/scan_qr_code"
                    android:textColor="@color/advance_search_qr_code" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_date_of_delivery"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/edd"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/dob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/dob"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/phone_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/mobile_phone_number"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/alternate_contact_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alt_contact_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/advanced_search_label_padding"
                    android:textColor="@color/lighter_grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/advanced_search_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/alternate_contact_name"
                    app:met_floatingLabelTextSize="@dimen/advanced_search_text_size"
                    app:met_primaryColor="@color/light_blue"
                    app:met_singleLineEllipsis="true" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
