...
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/smart_register_client_divider_height"
        android:src="@color/smart_register_client_divider_color" />

    <FrameLayout
        android:id="@+id/list_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/listview_background_rounded">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/client_list_progress"
...
